src/objects/ssv4__schedulerQueue__c.object
<CustomObject>
    <customHelpPage>ssv4__help</customHelpPage>
    <fields>
        <fullName>ssv4__Scheduler__c</fullName>
        <label>Scheduler</label>
        <referenceTo>ssv4__Scheduler__c</referenceTo>
        <relationshipLabel>Scheduler Queues</relationshipLabel>
        <relationshipName>schedulerQueues</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ssv4__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Queued</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ssv4__addParam__c</fullName>
        <label>Additional Parameters</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ssv4__extId__c</fullName>
        <inlineHelpText>We are use this field for link in async actions</inlineHelpText>
        <label>ExternalId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssv4__report__c</fullName>
        <inlineHelpText>Fields that we use to generate report</inlineHelpText>
        <label>Report</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ssv4__statusImg__c</fullName>
        <formula>IF(ISPICKVAL(ssv4__Status__c,&apos;Complete&apos;),IMAGE(&apos;/img/msg_icons/confirm24.png&apos;, &apos;&apos; , 16, 16),IF(ISPICKVAL(ssv4__Status__c,&apos;Error&apos;),IMAGE(&apos;/img/msg_icons/error24.png&apos;, &apos;&apos; , 16, 16),IMAGE(&apos;/img/msg_icons/info24.png&apos;, &apos;&apos; , 16, 16)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssv4__statusMessage__c</fullName>
        <inlineHelpText>This field usually use for show Error message</inlineHelpText>
        <label>Status message</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Scheduler Queue</label>
    <nameField>
        <displayFormat>SCHQ-{000000}</displayFormat>
        <label>Scheduler Queue Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scheduler Queues</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>